--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,28 @@
+// _variables.scss
+$primary-color: #6236ff;
+$secondary-color: #552bee;
+$background-color: #eef4fd;
+$table-border-color: #edecec;
+$hover-background-color: #eee;
+
+$font-size-base: 16px; // Base font size in pixels (px)
+
+// Font sizes using rem for scaling
+$font-size-h1: 2.4rem;
+$font-size-h2: 1.5rem;
+$font-size-body: 1rem;
+
+$button-padding: 10px 30px;
+$border-radius-button: 20px;
+
+// _mixins.scss
+@mixin font-size($size) {
+  font-size: calc(
+    $size * #{$font-size-base}px
+  ); // Using calc to correctly calculate the font size
+}
+
+// _typography.scss
 * {
   margin: 0;
   padding: 0;
@@ -10,87 +35,108 @@ body {
   align-items: center;
   min-height: 100vh;
   font-family: "Raleway", sans-serif;
-  background: #eef4fd;
+  background: $background-color;
 }
 
 .container {
   display: flex;
   flex-direction: column;
-  box-shadow: 8px 8px 5px 0px #bdbdbdbf;
- 
+  box-shadow: 8px 8px 48px 1px #bdbdbdbf;
   background: #fff;
   border-radius: 10px;
-  padding: 10px 30px;
-  width: 100%;
+  width: 100vw;
   max-width: 950px;
+  overflow: hidden;
 
   .table_header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 30px 0;
+    padding-top: 20px;
+    padding-left: 0;
+    background: rgb(248 250 252);
+    padding: 20px 30px;
+    border-bottom: 1px solid #eee;
+
+    h1 {
+      font-size: $font-size-h1;
+      font-weight: 600;
+      color: #444;
+    }
   }
 
   button {
     outline: none;
     border: none;
-    background: #6236ff;
+    background: $primary-color;
     color: #ffffff;
-    padding: 10px 30px;
-    border-radius: 20px;
+    padding: $button-padding;
+    border-radius: $border-radius-button;
     text-transform: uppercase;
     font-size: 14px;
     cursor: pointer;
 
-    &hover {
-      background: #552bee;
+    &:hover {
+      background: $secondary-color;
     }
   }
 
-  select {
-    border: none;
-    border-bottom: 1px solid #c9c9c9;
-    width: 200px;
-    padding: 10px 0;
-    font-size: 16px;
-  }
-
   .input_search {
+    display: flex;
+    align-items: center;
     position: relative;
-    input: {
+    border: 1px solid #eee;
+    border-radius: 5px;
+    padding: 5px 10px;
+    flex-direction: row;
+    background-color: #f7f6f6;
+
+    input {
+      font-size: 14px;
+      font-weight: 500;
       border-radius: 30px;
-      width: 400px;
+      width: full;
       outline: none;
       padding: 10px 20px;
-      border: 1px solid #c9c9c9;
-      padding-right: 50px;
+      border: none;
+      background-color: transparent;
     }
   }
 
   table {
     border-spacing: 0;
     margin-top: 1rem;
+    padding: 20px;
+    padding-top: 0; 
 
     thead {
-      background-color: #fff7b3;
-
       th {
+        @include font-size($font-size-h1);
         padding: 10px;
+        text-align: left;
+        padding-bottom: 20px;
+        font-size: 20px;
+        color: #111;
       }
     }
 
-    tbody{
-        tr{
-            td{
-                padding: 10px;
-                text-align: center;
-                border-bottom: 1px solid #dfdfdf;
-            }
-
-            &:hover {
-                background-color: black;
-            }
+    tbody {
+      tr {
+       border-radius: 5px;
+        td {
+          @include font-size($font-size-h2);
+          padding: 15px;
+          text-align: left;
+          border-bottom: .5px solid $table-border-color;
+          font-size: 14px;
+          font-weight: 600;
+          color: #333;
         }
+
+        &:hover {
+          background-color: $hover-background-color;
+        }
+      }
     }
   }
 }
