--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,5 +1,5 @@
 // _variables.scss
-$primary-color: #6236ff;
+$primary-color: #973131;
 $secondary-color: #552bee;
 $background-color: #eef4fd;
 $table-border-color: #edecec;
@@ -27,6 +27,7 @@ $border-radius-button: 20px;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  transition: all 300ms ease-in-out;
 }
 
 body {
@@ -47,6 +48,7 @@ body {
   width: 100vw;
   max-width: 950px;
   overflow: hidden;
+  min-height: 450px;
 
   .table_header {
     display: flex;
@@ -63,21 +65,11 @@ body {
       font-weight: 600;
       color: #444;
     }
-  }
-
-  button {
-    outline: none;
-    border: none;
-    background: $primary-color;
-    color: #ffffff;
-    padding: $button-padding;
-    border-radius: $border-radius-button;
-    text-transform: uppercase;
-    font-size: 14px;
-    cursor: pointer;
-
-    &:hover {
-      background: $secondary-color;
+    .table_header_content {
+      display: flex;
+      flex-direction: row;
+      gap: 10px;
+      align-items: center;
     }
   }
 
@@ -85,7 +77,7 @@ body {
     display: flex;
     align-items: center;
     position: relative;
-    border: 1px solid #eee;
+    border: 1px solid #cdcbcb;
     border-radius: 5px;
     padding: 5px 10px;
     flex-direction: row;
@@ -107,7 +99,7 @@ body {
     border-spacing: 0;
     margin-top: 1rem;
     padding: 20px;
-    padding-top: 0; 
+    padding-top: 0;
 
     thead {
       th {
@@ -122,15 +114,24 @@ body {
 
     tbody {
       tr {
-       border-radius: 5px;
         td {
           @include font-size($font-size-h2);
-          padding: 15px;
+          padding: 20px;
           text-align: left;
-          border-bottom: .5px solid $table-border-color;
+          border-bottom: 0.5px solid $table-border-color;
           font-size: 14px;
           font-weight: 600;
-          color: #333;
+          color: #555;
+        }
+
+        td.buttons > * {
+          margin: 0 10px;
+          cursor: pointer;
+          font-size: 15px;
+
+          &:hover {
+            transform: scale(1.2);
+          }
         }
 
         &:hover {
@@ -138,5 +139,52 @@ body {
         }
       }
     }
+  }
+}
+/*===================
+BUTTON STYLES
+====================*/
+
+button {
+  outline: none;
+  border: none;
+  border: 1px solid #eee;
+  background-color: #f7f6f6;
+  border: 1px solid #cdcbcb;
+  padding: 12px 30px;
+  border-radius: 5px;
+  color: #fff;
+  font-weight: 400;
+  font-size: 17px;
+  background-color: $primary-color;
+  cursor: pointer;
+
+}
+/*===================
+SPOTLIGHT STYLES
+====================*/
+
+.spotlight{
+  display: flex;
+  position: fixed;
+  inset: 0;
+  z-index: -10;
+
+  .light1 {
+    position: absolute;
+    width: 400px;
+    height: 400px;
+    background-color: $primary-color;
+    top: 10%;
+    border-radius: 1000px;
+  }
+  .light2 {
+    position: absolute;
+    width: 300px;
+    height: 300px;
+    background-color: $secondary-color;
+    bottom: 20%;
+    right: 5%;
+    border-radius: 1000px;
   }
 }
