--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -188,3 +188,28 @@ SPOTLIGHT STYLES
     border-radius: 1000px;
   }
 }
+
+/*===================
+MODAL STYLES
+====================*/
+
+.create_student {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  inset: 0;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 10;
+
+  animation: fade-in 0.5s ease-in-out;
+
+  @keyframes fade-in {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+}
