--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -22,12 +22,28 @@ $border-radius-button: 20px;
   ); // Using calc to correctly calculate the font size
 }
 
-// _typography.scss
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   transition: all 300ms ease-in-out;
+}
+
+h1 {
+  font-size: $font-size-h1;
+  font-weight: 600;
+  color: #444;
+}
+
+input {
+  font-size: 14px;
+  font-weight: 500;
+  border-radius: 30px;
+  width: full;
+  outline: none;
+  padding: 10px 20px;
+  border: none;
+  background-color: transparent;
 }
 
 body {
@@ -60,11 +76,6 @@ body {
     padding: 20px 30px;
     border-bottom: 1px solid #eee;
 
-    h1 {
-      font-size: $font-size-h1;
-      font-weight: 600;
-      color: #444;
-    }
     .table_header_content {
       display: flex;
       flex-direction: row;
@@ -82,17 +93,6 @@ body {
     padding: 5px 10px;
     flex-direction: row;
     background-color: #f7f6f6;
-
-    input {
-      font-size: 14px;
-      font-weight: 500;
-      border-radius: 30px;
-      width: full;
-      outline: none;
-      padding: 10px 20px;
-      border: none;
-      background-color: transparent;
-    }
   }
 
   table {
@@ -149,22 +149,30 @@ button {
   outline: none;
   border: none;
   border: 1px solid #eee;
-  background-color: #f7f6f6;
   border: 1px solid #cdcbcb;
   padding: 12px 30px;
   border-radius: 5px;
-  color: #fff;
   font-weight: 400;
   font-size: 17px;
-  background-color: $primary-color;
   cursor: pointer;
+  min-width: 150px;
+}
 
+.btn_primary{
+  background-color: $primary-color;
+  color: #fff;
+}
+
+.btn_exit{
+  background-color: white;
+  color: black;
+  font-weight: bold;
 }
 /*===================
 SPOTLIGHT STYLES
 ====================*/
 
-.spotlight{
+.spotlight {
   display: flex;
   position: fixed;
   inset: 0;
@@ -210,6 +218,100 @@ MODAL STYLES
     }
     to {
       opacity: 1;
+    }
+  }
+
+  .container {
+    display: flex;
+    flex-direction: row;
+
+    .icon_section {
+      padding: 20px 60px;
+      height: auto;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-right: 1px solid black;
+      background-color: $primary-color;
+
+      span {
+        background-color: #fff;
+        border-radius: 1000px;
+      }
+    }
+
+    form {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      flex-direction: column;
+      gap: 10px;
+      padding: 20px 30px;
+
+      h1 {
+        padding: 20px 0;
+      }
+
+      .input {
+        display: flex;
+        align-items: center;
+        position: relative;
+        border-radius: 5px;
+        padding: 5px 10px;
+        flex-direction: row;
+        background-color: #f7f6f6;
+        width: 100%;
+        max-width: 400px;
+
+        
+
+        input {
+          outline: none;
+          padding: 10px;
+          border-radius: 5px;
+          width: 100%;
+          max-width: 400px;
+        }
+
+        .select{
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          width: 100%;
+          padding: 5px 20px;
+          
+          label{
+            font-size: 15px;
+            color: #444;
+          }
+
+          select{
+            border: none;
+            outline: none;
+            padding: 10px;
+            background-color: transparent;
+
+            option{
+              background-color: #fff; 
+              color: #333; 
+              padding: 20px 12px;
+              font-size: 12px; 
+              cursor: pointer; 
+            }
+          }
+        }
+
+      }
+
+      .button_container{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+        max-width: 400px;
+        padding: 5px 0;
+      }
     }
   }
 }
