--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -65,7 +65,7 @@ input {
   border: none;
   background-color: transparent;
 
-  &[value] { 
+  &[value] {
     background-color: transparent;
   }
 }
@@ -183,15 +183,24 @@ button {
   min-width: 150px;
 }
 
-.btn_primary{
+.btn_primary {
   background-color: $primary-color;
   color: #fff;
 }
 
-.btn_exit{
+.btn_exit {
   background-color: white;
   color: black;
   font-weight: bold;
+}
+
+.button_container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 400px;
+  padding: 5px 0;
 }
 /*===================
 SPOTLIGHT STYLES
@@ -226,7 +235,7 @@ SPOTLIGHT STYLES
 MODAL STYLES
 ====================*/
 
-.create_student {
+.modal {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -287,7 +296,7 @@ MODAL STYLES
         max-width: 400px;
         font-weight: 200;
 
-        span{
+        span {
           color: $primary-color;
           font-weight: bold;
         }
@@ -304,8 +313,6 @@ MODAL STYLES
         width: 100%;
         max-width: 400px;
 
-        
-
         input {
           outline: none;
           padding: 10px;
@@ -314,43 +321,33 @@ MODAL STYLES
           max-width: 400px;
         }
 
-        .select{
+        .select {
           display: flex;
           align-items: center;
           justify-content: space-between;
           width: 100%;
           padding: 5px 20px;
-          
-          label{
+
+          label {
             font-size: 15px;
             color: #444;
           }
 
-          select{
+          select {
             border: none;
             outline: none;
             padding: 10px;
             background-color: transparent;
 
-            option{
-              background-color: #fff; 
-              color: #333; 
+            option {
+              background-color: #fff;
+              color: #333;
               padding: 20px 12px;
-              font-size: 12px; 
-              cursor: pointer; 
+              font-size: 12px;
+              cursor: pointer;
             }
           }
         }
-
-      }
-
-      .button_container{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        width: 100%;
-        max-width: 400px;
-        padding: 5px 0;
       }
     }
   }
@@ -365,13 +362,44 @@ LOADING BUTTON STYLES
   height: 20px;
   border-radius: 50%;
   border: 2px solid $primary-color;
-  border-color: #fff transparent #fff transparent; 
-  animation: spin 1.2s linear infinite; 
+  border-color: #fff transparent #fff transparent;
+  animation: spin 1.2s linear infinite;
   display: block;
   margin: 0 auto;
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+/*===================
+DIALOG POPUP STYLES
+====================*/
+
+.modal.dialog {
+  background: #000000b6;
+
+  .container {
+    max-width: 400px;
+    min-height: 100px;
+    padding: 20px 10px;
+    flex-direction: column;
+    gap: 20px;
+
+    h1 {
+      color: #222;
+      text-align: center;
+      font-size: 15px;
+    }
+
+    button {
+      padding: 10px 0;
+      font-size: 15px;
+    }
+  }
 }
